--- a/pages/style.css
+++ b/pages/style.css
@@ -1,3 +1,8 @@
+.landingPageBody {
+    min-height: 100vh;
+    background-image: linear-gradient(to bottom right, #A663CC, #B9FAF8);
+}
+
 .landingPageTitle{
     text-align: center;
     font: 4.2em "Fira Sans", sans-serif;
