--- a/pages/style.css
+++ b/pages/style.css
@@ -28,31 +28,62 @@ body#game table td{
 }
 
 
-
+/* $types = ["ermitano", "caparazon", "caparazon2", "caracol","caracola","concha","erizo","mejillon","nautilus"];*/
 body#game td[data-photo="nautilus"]{
-    background-image: url('../images/erizo.jpg');
+    background-image: url('../images/nautiloC.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat; 
 }
-body#game td[data-photo="concha"]{
-    background-image: url('../images/erizo.jpg');
+body#game td[data-photo="mejillon"]{
+    background-image: url('../images/mejillonC.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat; 
 }
 body#game td[data-photo="erizo"]{
-    background-image: url('../images/erizo.jpg');
+    background-image: url('../images/erizo-de-marC.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat; 
 }
-body#game td[data-photo="conchita"]{
-    background-image: url('../images/erizo.jpg');
+body#game td[data-photo="concha"]{
+    background-image: url('../images/cascaraC.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat; 
 }
+body#game td[data-photo="caracola"]{
+    background-image: url('../images/caracola.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat; 
+}
+body#game td[data-photo="caracol"]{
+    background-image: url('../images/caracol-de-marC.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat; 
+}
+body#game td[data-photo="caparazon2"]{
+    background-image: url('../images/caparazon2C.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat; 
+}
+body#game td[data-photo="caparazon"]{
+    background-image: url('../images/caparazonC.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat; 
+}
+body#game td[data-photo="ermitano"]{
+    background-image: url('../images/cangrejo-ermitanoC.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat; 
+}
+
 body#game td[data-photo="sand"]{
     background-image: url('../images/sand.jpg');
     background-size: cover;
