--- a/pages/style.css
+++ b/pages/style.css
@@ -5,7 +5,7 @@ body#game{
     margin-top: 4em;
     
 
-    background-color: rgba(15, 44, 73, 0.811);
+    background-color: rgba(189, 222, 255, 0.811);
     text-align: center;
     font-weight:900;
     color: aliceblue;
@@ -51,18 +51,33 @@ body#game td[data-photo="conchita"]{
     background-repeat: no-repeat; 
 }
 
-body#game #containerMessage{
+body#game .containerMessage{
     width: 300px; 
     height: 150px;
-    background-color: #fdb1b1;
     opacity: 0.8;  
+    margin: 50px;
+
+    background-color: aqua;
 }
 
 body#game #message {
+    box-sizing: border-box;
+
     width: 100%;
     height: 100%;
+    padding: 30px;
     background-color: transparent;
+    
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    text-align: left;
+    font-size: 24px;
+
+    border: none;
+    border-radius: 15px;
+
+    transition: border 0.5s;
 }
+
