--- a/pages/style.css
+++ b/pages/style.css
@@ -64,13 +64,14 @@ body#game .centerContainer {
 
 /* Div de puntuación y tiempo */
 body#game .rightContainer {
-    background-color: rgb(239, 37, 37);
+    background-color: #251934a7;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    
     width: 300px; 
     padding: 10px;
+    
+    
 }
 
 /* Boton salir*/
@@ -87,10 +88,19 @@ body#game .exit {
 
 
 #time, #points {
+    text-align: center;
     margin-bottom: 20px;
-    font-size: 1.5rem;
+    font: 1.5rem "Fira Sans", sans-serif;
+    font-weight: bold;
+    color: white;
 }
-
+ 
+#chrono:before {
+    content: "⏱️: ";  
+}
+#totalScore:before {
+    content: "🎯: ";
+}
 #message {
     margin-top: 10px;
     font-size: 1.2rem;
@@ -207,8 +217,8 @@ body#game .buttonEnd{
     display:none;
 }
 
-body#index .landingPageBody {
-    background-image: url("../sources/backgroundLandingPage.png");
+.landingPageBody {
+    background-image: url("../images/backgroundLandingPage.png");
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
@@ -217,6 +227,7 @@ body#index .landingPageBody {
 
 body#index .landingPageTitle{
     text-align: center;
+    align-items: center;
     color: #fcd4a7;
     max-width: 40vw;
     font: 4.2em "Fira Sans", sans-serif;
@@ -228,16 +239,18 @@ body#index .landingPageBox{
     margin: 35px;
     background-color: #232f5f8c;
     max-width: 40vw;
+    height: 500px;
     padding: 20px;
 }
 
 body#index .landingPageDescription{
     text-align: center;
+    align-items: center;
     color: #fcd4a7;
     max-width: 35vw;
     font: 2.4em "Fira Sans", sans-serif;
     margin: 30px;
-
+    padding-top: 40px;
 }
 
 body#index .landingPageNewGameButton{
@@ -261,13 +274,23 @@ body#index .landingPageRankingButton{
 
 body#index .landingPageCenterButtons{
     max-width: 35vw;
-
+    padding-top: 15vh;
     display: flex;
     justify-content: center;
 }
 
-body#ranking .rankingBody {
-    background-image: url("../sources/backgroundRanking.jpg");
+body#ranking .exit {
+    font-size: 2rem;
+    padding: 10px;
+    background-color: #251934a7;
+    color: white;
+    border: none;
+    cursor: pointer;
+    width: 90px;
+    border-radius: 50px;
+}
+.rankingBody {
+    background-image: url("../images/backgroundRanking.jpg");
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
@@ -334,3 +357,4 @@ body#ranking .pagination a:not(.active) {
 body#ranking .pagination a:hover:not(.active) {
     background-color: #fcd4a7;
 }
+
