--- a/style.css
+++ b/style.css
@@ -1,236 +1,4 @@
-body#game{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 2em;
-    min-height: 100vh; /* Se asegura de que ocupe al menos toda la pantalla */
-    overflow: hidden; /* Evita el scroll */
-    
-    background-image: url('images/backgroundGame3.png'); /* Ruta de tu imagen */
-    background-size: cover; /* Ajusta la imagen al tamaño del contenedor */
-    background-position: center; /* Centra la imagen */
-    background-repeat: no-repeat; /* Evita que la imagen se repita */
-    background-color: rgba(15, 44, 73, 0.811);
-}
-
-body#game table{
-    border: 4px solid rgb(0, 0, 0); 
-    border-collapse: collapse;
-    background-color: rgba(111, 111, 111, 0.337);
-
-}
-
-body#game table td{
-    width: 3vw; /* Ajusta dinámicamente el tamaño basado en el ancho de la pantalla */
-    height: 3vw;
-    border: 2px solid rgb(255, 255, 255);
-    border-style: dashed;
-    border-collapse: collapse
-}
-
-body#game table td.number, body#game table td.letter,  body#game table td.empty{ 
-    background-color: rgba(40, 40, 40, 0.419);
-    text-align: center;
-    font-weight: bold;
-    color: rgb(255, 255, 255);
-}
-
-/* Estructura principal */
-body#game .main {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 100%;
-    justify-content: space-between; /* Espaciar los elementos */
-}
-
-    /* Botón de salir alineado a la izquierda */
-body#game .leftContainer {
-    /*background-color: aquamarine;*/
-    min-width: 150px; /* Evita que se encojan demasiado */
-    max-width: 200px; /* Controla el máximo ancho */
-    margin-left: 4em;
-}
-
-    /* Tablero centrado */
-body#game .centerContainer {
-    flex-grow: 1; /* Para que este div ocupe el máximo espacio disponible */
-    /*background-color: rgb(193, 127, 255);*/
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-
-/* Div de puntuación y tiempo */
-body#game .rightContainer {
-    background-color: #251934a7;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 300px; 
-    padding: 10px;
-    
-    
-}
-
-/* Boton salir*/
-body#game .exit {
-    font-size: 2rem;
-    padding: 10px;
-    background-color: #251934a7;
-    color: white;
-    border: none;
-    cursor: pointer;
-    width: 90px;
-    border-radius: 50px;
-}
-
-
-#time, #points {
-    font: 1.5rem "Fira Sans", sans-serif;
-    font-weight: bold;
-    color: white;
-    height: 33%;
-    display: flex;
-    justify-content: center;
-}
-
-#chrono{
-    margin: auto;
-}
-
-#chrono:before {
-    content: "⏱️: ";  
-}
-#totalScore:before {
-    content: "🎯: ";
-}
-#totalScore{
-    margin: auto;
-}
-
-#message {
-    margin-top: 10px;
-    font-size: 1.2rem;
-}
-
-
-
-/* $types = ["ermitano", "caparazon", "caparazon2", "caracol","caracola","concha","erizo","mejillon","nautilus","estrella"];*/
-
-body#game td[data-photo="nautilus"]{
-    background-image: url('images/nautiloC.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat; 
-    background-color: rgba(0, 0, 0, 0.652);
-}
-body#game td[data-photo="mejillon"]{
-    background-image: url('images/mejillonC.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: rgba(0, 0, 0, 0.652);
-}
-body#game td[data-photo="erizo"]{
-    background-image: url('images/erizo-de-marC.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: rgba(0, 0, 0, 0.652);
-}
-body#game td[data-photo="concha"]{
-    background-image: url('images/cascaraC.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: rgba(0, 0, 0, 0.652);
-}
-body#game td[data-photo="caracola"]{
-    background-image: url('images/caracolaC.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: rgba(0, 0, 0, 0.652);
-}
-
-body#game td[data-photo="caracol"]{
-    background-image: url('images/caracol-de-marC.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: rgba(0, 0, 0, 0.652);
-}
-body#game td[data-photo="caparazon2"]{
-    background-image: url('images/caparazon2C.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: rgba(0, 0, 0, 0.652);
-}
-body#game td[data-photo="caparazon"]{
-    background-image: url('images/caparazonC.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: rgba(0, 0, 0, 0.652);
-}
-body#game td[data-photo="ermitano"]{
-    background-image: url('images/cangrejo-ermitanoC.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: rgba(0, 0, 0, 0.652);
-}
-
-body#game td[data-photo="estrella"]{
-    background-image: url('images/estrella-de-marC.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: rgba(0, 0, 0, 0.652);
-}
-
-
-body#game #containerMessage{
-    width: 96%;
-    opacity: 0.8;
-    margin: auto;
-}
-
-body#game #message {
-    box-sizing: border-box;
-
-    width: 100%;
-    padding: 30px;
-    
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-
-    text-align: left;
-    font-size: 24px;
-
-    border: none;
-    border-radius: 15px;
-
-    transition: border 0.5s;
-}
-
-body#game td[data-photo="sand"]{
-    background-image: url('images/sand.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat; 
-}
-
-body#game .endForm,
-body#game .buttonEnd{
-    display:none;
-}
-
-.landingPageBody {
+body#index{
     background-image: url("images/backgroundLandingPage.png");
     background-position: top;
     background-repeat: no-repeat;
@@ -245,7 +13,6 @@ body#index .landingPageTitle{
     max-width: 40vw;
     font: 4.2em "Fira Sans", sans-serif;
     margin: 30px;
-    
 }
 
 body#index .landingPageBox{
@@ -296,7 +63,74 @@ body#index .landingPageCenterButtons{
     justify-content: center;
 }
 
-body#ranking .exit {
+
+/*----------------------------------------------------------*/
+
+
+body#game,
+body#gameIA{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2em;
+    min-height: 100vh;
+    overflow: hidden; 
+
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+body#game{
+    background-image: url('images/backgroundGame3.png');
+}
+
+/*
+body#gameIA{
+    background-image: url('images/backgroundGame2.png');
+}
+*/
+/*Estructura principal */
+body#game .main,
+body#gameIA .main{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+    justify-content: space-between; /* Espaciar los elementos */
+}
+
+/*Izquierda*/
+body#game .leftContainer{
+    width: 25%;
+    margin-left: 4em;
+}
+
+body#gameIA .leftContainer {
+    width: 33%;
+    margin-left: 4em;
+}
+
+body#gameIA table{
+    border: 4px solid rgb(0, 0, 0); 
+    border-collapse: collapse;
+    background-color: rgba(111, 111, 111, 0.337);
+}
+
+body#gameIA table td{
+    width: 3vw;
+    height: 3vw;
+    border: 2px solid rgb(255, 255, 255);
+    border-style: dashed;
+    border-collapse: collapse
+}
+
+body#gameIA .tableIA{
+    width: 20%;
+}
+
+body#game .exit,
+body#gameIA .exit {
     font-size: 2rem;
     padding: 10px;
     background-color: #251934a7;
@@ -306,94 +140,230 @@ body#ranking .exit {
     width: 90px;
     border-radius: 50px;
 }
-.rankingBody {
-    background-image: url("images/backgroundRanking.jpg");
-    background-position: top;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-}
-body#ranking .rankingBox{
-    margin:auto;
-}
-body#ranking .rankingTitle{
-    text-align: center;
-    color: #232f5f;
-    font: 5.0em "Fira Sans", sans-serif;
-    margin: 30px;
-    font-weight: bold;
 
+body#gameIA .exit {
+    margin: 20px;
 }
-body#ranking .rankingTable{
-    background-color: #232f5f8c;
+
+
+/*Centro*/
+body#game .centerContainer,
+body#gameIA .centerContainer {
+    width: 40%;
+    margin: 10px;
+    flex-grow: 1;
+}
+
+body#game table{
+    border: 4px solid rgb(0, 0, 0); 
     border-collapse: collapse;
-    border-radius: 12px;
-    margin: auto;
+    background-color: rgba(111, 111, 111, 0.337);
+}
+
+body#game table td{
+    width: 3vw;
+    height: 3vw;
+    border: 2px solid rgb(255, 255, 255);
+    border-style: dashed;
+    border-collapse: collapse
+}
+
+body#game table td.number,
+body#game table td.letter,
+body#game table td.empty,
+body#gameIA table td.number,
+body#gameIA table td.letter,
+body#gameIA table td.empty{ 
+    background-color: rgba(40, 40, 40, 0.419);
     text-align: center;
-    color: #fcd4a7;
-    font: 1.4em "Fira Sans", sans-serif;
     font-weight: bold;
+    color: rgb(255, 255, 255);
 }
 
-body#ranking .rankingTable th:nth-child(1){
-    background-color: #434b71;
-    border-radius: 12px 0 0 0;
+body#game table td:hover,
+body#gameIA table td:hover{
+    cursor: crosshair;
 }
 
-body#ranking .rankingTable th:nth-child(2){
-    background-color: #434b71;
-    border-radius: 0;
+body#game td[data-photo="nautilus"],
+body#gameIA td[data-photo="nautilus"]{
+    background-image: url('images/nautiloC.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat; 
+    background-color: rgba(0, 0, 0, 0.652);
 }
-body#ranking .rankingTable th:nth-child(3){
-    background-color: #434b71;
-    border-radius: 0 12px 0 0;
+body#game td[data-photo="mejillon"],
+body#gameIA td[data-photo="mejillon"]{
+
+    background-image: url('images/mejillonC.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgba(0, 0, 0, 0.652);
+}
+body#game td[data-photo="erizo"],
+body#gameIA td[data-photo="erizo"]{
+
+    background-image: url('images/erizo-de-marC.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgba(0, 0, 0, 0.652);
+}
+body#game td[data-photo="concha"],
+body#gameIA td[data-photo="concha"]{
+    background-image: url('images/cascaraC.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgba(0, 0, 0, 0.652);
+}
+body#game td[data-photo="caracola"],
+body#gameIA td[data-photo="caracola"]{
+    background-image: url('images/caracolaC.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgba(0, 0, 0, 0.652);
+}
+body#game td[data-photo="caracol"],
+body#gameIA td[data-photo="caracol"]{
+    background-image: url('images/caracol-de-marC.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgba(0, 0, 0, 0.652);
+}
+body#game td[data-photo="caparazon2"],
+body#gameIA td[data-photo="caparazon2"]{
+    background-image: url('images/caparazon2C.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgba(0, 0, 0, 0.652);
+}
+body#game td[data-photo="caparazon"],
+body#gameIA td[data-photo="caparazon"]{
+    background-image: url('images/caparazonC.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgba(0, 0, 0, 0.652);
+}
+body#game td[data-photo="ermitano"],
+body#gameIA td[data-photo="ermitano"]{
+    background-image: url('images/cangrejo-ermitanoC.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgba(0, 0, 0, 0.652);
+}
+body#game td[data-photo="estrella"],
+body#gameIA td[data-photo="estrella"]{
+    background-image: url('images/estrella-de-marC.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgba(0, 0, 0, 0.652);
+}
+body#game td[data-photo="sand"],
+body#gameIA td[data-photo="sand"]{
+    background-image: url('images/sand.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat; 
 }
 
-body#ranking .rankingTable th,
-body#ranking .rankingTable td {
-    padding: 20px 6vw;
-}
-body#ranking .rankingTable tbody tr:hover {
-    background-color: #436e7179;
-}
-body#ranking .rankingTable tbody tr:nth-of-type(even) {
-    background-color: #434b71a9;
-}
-body#ranking .rankingTable tbody tr:hover:nth-of-type(even) {
-    background-color: #436e7179;
+body#game .endForm,
+body#game .buttonEnd,
+body#gameIA .endForm,
+body#gameIA .buttonEnd{
+    display:none;
 }
 
-body#ranking .pagination{
-    margin-top: 30px;
-    margin-bottom: 30px;
-    margin-left: 45vw;
+/*Derecha*/
+body#game .rightContainer,
+body#gameIA .rightContainer {
+    background-color: #251934a7;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 20%; 
+    padding: 10px;    
 }
-body#ranking .pagination a{
-    padding: 14px;
-    font: 1.4em "Fira Sans", sans-serif;
+
+body#game #time,
+body#game #points,
+body#gameIA #time,
+body#gameIA #points{
+    font: 1.5rem "Fira Sans", sans-serif;
     font-weight: bold;
+    color: white;
+    height: 33%;
+    display: flex;
+    justify-content: center;
 }
-body#ranking .pagination a.active {
-    background-color: #434b71;
-    color: #fcd4a7;
-    pointer-events: none;
+
+body#game #chrono,
+body#gameIA #chrono{
+    margin: auto;
 }
-body#ranking .pagination a:not(.active) {
-    background-color: #fcd4a76b;
-    color: #434b71;
+
+body#game #chrono:before,
+body#gameIA #chrono:before {
+    content: "⏱️: ";  
 }
-body#ranking .pagination a:hover:not(.active) {
-    background-color: #fcd4a7;
+
+body#game #totalScore:before,
+body#gameIA #totalScore:before {
+    content: "🎯: ";
 }
+
+body#game #totalScore,
+body#gameIA #totalScore{
+    margin: auto;
+}
+
+body#game #containerMessage,
+body#gameIA #containerMessage{
+    width: 96%;
+    opacity: 0.8;
+    margin: auto;
+}
+
+body#game #message,
+body#gameIA #message {
+    box-sizing: border-box;
+
+    width: 100%;
+    padding: 30px;
+    
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    text-align: left;
+    font-size: 24px;
+
+    border: none;
+    border-radius: 15px;
+
+    transition: border 0.5s;
+}
+
+
+/*----------------------------------------------------------*/
+
 
 body#win {
-    min-height: 100vh; /* Se asegura de que ocupe al menos toda la pantalla */
-    overflow: hidden; /* Evita el scroll */
+    min-height: 100vh;
+    overflow: hidden;
     
-    background-image: url('images/backgroundGame.jpeg'); /* Ruta de tu imagen */
-    background-size: cover; /* Ajusta la imagen al tamaño del contenedor */
-    background-position: center; /* Centra la imagen */
-    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    background-image: url('images/backgroundGame.jpeg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     background-color: rgba(15, 44, 73, 0.811);
 }
 
@@ -405,7 +375,6 @@ body#win .winBox {
     text-align: center;
     color: #fcd4a7;
     width: 75vh;
-
 }
 
 body#win .winVictoryMsg{
@@ -451,7 +420,6 @@ body#win .winScoreDesc{
     font: 3em "Fira Sans", sans-serif;
 }
 
-
 body#win .winCenterButtons{
     display: flex;
     justify-content: center;
@@ -472,7 +440,107 @@ body#win input[type=text] {
 	color: #E91E63;
 }
 
-/*Estilos genéricos para todas las paginas*/
-td:hover {
-    cursor: crosshair;
+
+/*----------------------------------------------------------*/
+
+
+body#ranking .exit {
+    font-size: 2rem;
+    padding: 10px;
+    background-color: #251934a7;
+    color: white;
+    border: none;
+    cursor: pointer;
+    width: 90px;
+    border-radius: 50px;
+}
+
+body#ranking {
+    background-image: url("images/backgroundRanking.jpg");
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+body#ranking .rankingBox{
+    margin:auto;
+}
+
+body#ranking .rankingTitle{
+    text-align: center;
+    color: #232f5f;
+    font: 5.0em "Fira Sans", sans-serif;
+    margin: 30px;
+    font-weight: bold;
+}
+
+body#ranking .rankingTable{
+    background-color: #232f5f8c;
+    border-collapse: collapse;
+    border-radius: 12px;
+    margin: auto;
+    text-align: center;
+    color: #fcd4a7;
+    font: 1.4em "Fira Sans", sans-serif;
+    font-weight: bold;
+}
+
+body#ranking .rankingTable th:nth-child(1){
+    background-color: #434b71;
+    border-radius: 12px 0 0 0;
+}
+
+body#ranking .rankingTable th:nth-child(2){
+    background-color: #434b71;
+    border-radius: 0;
+}
+
+body#ranking .rankingTable th:nth-child(3){
+    background-color: #434b71;
+    border-radius: 0 12px 0 0;
+}
+
+body#ranking .rankingTable th,
+body#ranking .rankingTable td {
+    padding: 20px 6vw;
+}
+
+body#ranking .rankingTable tbody tr:hover {
+    background-color: #436e7179;
+}
+
+body#ranking .rankingTable tbody tr:nth-of-type(even) {
+    background-color: #434b71a9;
+}
+
+body#ranking .rankingTable tbody tr:hover:nth-of-type(even) {
+    background-color: #436e7179;
+}
+
+body#ranking .pagination{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: 45vw;
+}
+
+body#ranking .pagination a{
+    padding: 14px;
+    font: 1.4em "Fira Sans", sans-serif;
+    font-weight: bold;
+}
+
+body#ranking .pagination a.active {
+    background-color: #434b71;
+    color: #fcd4a7;
+    pointer-events: none;
+}
+
+body#ranking .pagination a:not(.active) {
+    background-color: #fcd4a76b;
+    color: #434b71;
+}
+
+body#ranking .pagination a:hover:not(.active) {
+    background-color: #fcd4a7;
 }
