--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ body#index .landingPageBox{
     margin: 35px;
     background-color: #232f5f8c;
     max-width: 40vw;
-    height: 500px;
     padding: 20px;
     border-radius: 15px;
 }
@@ -34,7 +33,9 @@ body#index .landingPageDescription{
     padding-top: 40px;
 }
 
-body#index .landingPageNewGameButton{
+body#index .landingPageNewGameButton,
+body#index .landingPageRankingButton,
+body#index .landingPageRegisterButton{
     font: 2.4em "Fira Sans", sans-serif;
     background-color: #434b71; 
     color: #fcd4a7; 
@@ -43,24 +44,131 @@ body#index .landingPageNewGameButton{
     padding: 10px;
 }
 
-body#index .landingPageStartBtn{
+body#index .landingPageNewGameButton:hover,
+body#index .landingPageRankingButton:hover,
+body#index .landingPageRegisterButton:hover{
+    background-color: #5b6597; 
+}
+
+body#index .landingPageStartLinkBtn{
     margin-right: 5vh;
 }
 
-body#index .landingPageRankingButton{
+body#index .landingPageNewGameButton:disabled{
     font: 2.4em "Fira Sans", sans-serif;
-    background-color: #434b71; 
-    color: #fcd4a7; 
+    background-color: #636675; 
+    color: #362f26; 
     border-radius: 40px; 
+    border: 0;
     border-color: #fcc486;
     padding: 10px;
 }
 
 body#index .landingPageCenterButtons{
-    max-width: 35vw;
-    padding-top: 15vh;
+    padding-top: 4vh;
     display: flex;
     justify-content: center;
+}
+
+body#index .landingPageCenterTextbox{
+    display: flex;
+    justify-content: center;
+}
+
+body#index input[type=text] {
+    font: 1.6em "Fira Sans", sans-serif;
+	appearance: none;
+	border: none;
+	outline: none;
+	border-bottom: .2em solid #fcc486;
+	background: #ffdcb4;
+	border-radius: 15px;
+	padding: .4em;
+	color: #E91E63;
+}
+
+body#index input[type=text]::placeholder {
+    text-align: center;
+    font: 0.8em "Fira Sans", sans-serif;
+	color: #9e7b52;
+}
+
+body#index .landingPageOptionsButton{
+    margin-top: 40px;
+    font: 2.4em "Fira Sans", sans-serif;
+    background-color: #434b71; 
+    color: #fcd4a7; 
+    border-radius: 40px; 
+    border-color: #fcc486;
+}
+
+body#index .optionImg{
+    max-width: 40px;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+}
+
+body#index .landingPageOptions{
+    display: none;
+}
+
+body#index .landingPageLabel{
+    font: 1.8em "Fira Sans", sans-serif;
+    color: #fcd4a7; 
+    vertical-align: middle;
+}
+
+body#index .landingPageCheckboxWrapper{
+    margin-top: 30px;
+
+}
+
+body#index input[type="checkbox"].landingPageCheckbox{
+    vertical-align: middle;
+    float: right;
+    font-size: 1.4em;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
+    width: 3.5em;
+    height: 1.5em;
+    background: #ddd;
+    border-radius: 3em;
+    position: relative;
+    cursor: pointer;
+    outline: none;
+    -webkit-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+}
+
+body#index input[type="checkbox"].landingPageCheckbox:checked{
+    background: #434b71;
+}
+
+
+body#index input[type="checkbox"].landingPageCheckbox:after{
+    position: absolute;
+    content: "";
+    width: 1.5em;
+    height: 1.5em;
+    border-radius: 50%;
+    background: #fcd4a7;
+    -webkit-box-shadow: 0 0 .25em rgba(0,0,0,.3);
+            box-shadow: 0 0 .25em rgba(0,0,0,.3);
+    -webkit-transform: scale(.7);
+            transform: scale(.7);
+    left: 0;
+    -webkit-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+}
+
+body#index input[type="checkbox"].landingPageCheckbox:disabled:after{
+    background: #bebebe;
+}
+  
+body#index input[type="checkbox"].landingPageCheckbox:checked:after{
+    left: calc(100% - 1.5em);
 }
 
 
@@ -375,7 +483,84 @@ body#gameIA #message {
 
 
 body#win {
-    min-height: 100vh;
+    min-height: 100vh;body#index .landingPageOptionsButton{
+        margin-top: 40px;
+        font: 2.4em "Fira Sans", sans-serif;
+        background-color: #434b71; 
+        color: #fcd4a7; 
+        border-radius: 40px; 
+        border-color: #fcc486;
+    }
+    
+    body#index .optionImg{
+        max-width: 40px;
+        padding: 5px;
+        display: flex;
+        justify-content: center;
+    }
+    
+    body#index .landingPageOptions{
+        display: none;
+    }
+    
+    body#index .landingPageLabel{
+        font: 1.8em "Fira Sans", sans-serif;
+        color: #fcd4a7; 
+        vertical-align: middle;
+    }
+    
+    body#index .landingPageCheckboxWrapper{
+        margin-top: 30px;
+    
+    }
+    
+    body#index input[type="checkbox"].landingPageCheckbox{
+        vertical-align: middle;
+        float: right;
+        font-size: 1.4em;
+        -webkit-appearance: none;
+           -moz-appearance: none;
+                appearance: none;
+        width: 3.5em;
+        height: 1.5em;
+        background: #ddd;
+        border-radius: 3em;
+        position: relative;
+        cursor: pointer;
+        outline: none;
+        -webkit-transition: all .2s ease-in-out;
+        transition: all .2s ease-in-out;
+      }
+    
+      body#index input[type="checkbox"].landingPageCheckbox:checked{
+        background: #434b71;
+      }
+    
+    
+      body#index input[type="checkbox"].landingPageCheckbox:after{
+        position: absolute;
+        content: "";
+        width: 1.5em;
+        height: 1.5em;
+        border-radius: 50%;
+        background: #fcd4a7;
+        -webkit-box-shadow: 0 0 .25em rgba(0,0,0,.3);
+                box-shadow: 0 0 .25em rgba(0,0,0,.3);
+        -webkit-transform: scale(.7);
+                transform: scale(.7);
+        left: 0;
+        -webkit-transition: all .2s ease-in-out;
+        transition: all .2s ease-in-out;
+      }
+    
+      body#index input[type="checkbox"].landingPageCheckbox:disabled:after{
+        background: #bebebe;
+      }
+    
+      body#index input[type="checkbox"].landingPageCheckbox:checked:after{
+        left: calc(100% - 1.5em);
+      }
+    
     overflow: hidden;
     
     background-image: url('images/backgroundGame.jpeg');
@@ -422,7 +607,7 @@ body#index .landingPageStartLinkBtn{
 
 
 
-body#index .landingPageNewGameButton:disabled
+body#index .landingPageNewGameButton:disabled{
     font: 2.4em "Fira Sans", sans-serif;
     background-color: #636675; 
     color: #362f26; 
