--- a/style.css
+++ b/style.css
@@ -981,6 +981,7 @@ body#win input[type=text] {
 /*----------------------------------------------------------------------------------------------*/
 
 body#lose {
+    margin: 0;
     min-height: 100vh;/*toda la pantalla */
     overflow: hidden; /* Evita el scroll */
     display: flex;
@@ -990,10 +991,25 @@ body#lose {
     background-position: center; 
     background-repeat: no-repeat; 
     background-color: rgba(15, 44, 73, 0.811);
+    filter: grayscale(100%); /* B/N */
+    animation: gameOverEffect 10s ease-in-out forwards; /* Color normal (quitra B y N)*/
+}
+
+body#lose .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    animation: overlayOut 10s ease-in-out forwards; /*Animacion suave del blanco y negro (forwards es para que no vuelva a verse en B/N)*/
+    z-index: 21;
+    background-color :#1f1e20cf ;
+
+    pointer-events: none; /* Permite interactuar con los elementos que hya debajo*/
 }
 
 body#lose .loseBox {
-    background-color: #232f5f8c;
+    background-color: #3c3a3ec0;
     border-collapse: collapse;
     border-radius: 12px;
     margin: auto;
@@ -1013,7 +1029,7 @@ body#lose img{
     max-height: 150px;
     margin-right: 50px;
     margin-left: 50px;
-}
+    z-index: 20;}
     /*efectos de las imagenes*/
     body#lose .imagenSalto{
         transition: transform 0.5s ease; /*trans suave al cambiar la imagen*/
@@ -1027,7 +1043,7 @@ body#lose img{
         transition: transform 0.7s ease; /* Transición suave al cambiar el transform */
     }
     body#lose .imagenGiro:hover{
-        transform: translateY(10px) rotate(-360deg); /* Salta 10px y rota 15 grados */
+        animation: spin 1s ease-in-out; /* Activa la animación al hacer hover */
         cursor:grabbing;
     }
 
@@ -1036,11 +1052,12 @@ body#lose img{
 body#lose .loseMsg{
     font: 4.0em "Fira Sans", sans-serif;
     font-weight: bold;
+    color:#993341;
 }
 
 body#lose .loseNewGameButton{
     font: 2.4em "Fira Sans", sans-serif;
-    background-color: #434b71; 
+    background-color: #3C3A3E; 
     color: #fcd4a7; 
     border-radius: 40px; 
     border-color: #fcc486;
@@ -1053,7 +1070,7 @@ body#lose .loseHomeBtnLink{
 
 body#lose .loseRankingButton{
     font: 2.4em "Fira Sans", sans-serif;
-    background-color: #434b71; 
+    background-color: #3C3A3E; 
     color: #fcd4a7; 
     border-radius: 40px; 
     border-color: #fcc486;
@@ -1062,7 +1079,7 @@ body#lose .loseRankingButton{
 
 body#lose .loseRegisterButton{
     font: 2em "Fira Sans", sans-serif;
-    background-color: #434b71; 
+    background-color: #3C3A3E; 
     color: #fcd4a7; 
     border-radius: 40px; 
     border-color: #fcc486;
@@ -1094,18 +1111,55 @@ body#lose input[type=text] {
 	background: #ffdcb4;
 	border-radius: 15px;
 	padding: .4em;
-	color: #E91E63;
+	color: #ad1a2e;
+    text-shadow: 0 8px 15px rgba(213, 206, 206, 0.7);
 }
 /*Animaciones*/
 
 /* Definimos la animación */
 @keyframes aparition {
     0% {
-        opacity: 0; /* Comienza invisible */
+        opacity: 0; /*invisible*/
         box-shadow: 0 0 0 rgba(0, 0, 0, 0); /* Sin sombra */
+        
     }
     100% {
-        opacity: 1; /* Termina completamente visible */
-        box-shadow: 0 8px 30px rgba(0, 0, 0, 0.7); /* Sombra visible */
+        opacity: 1; /*visible*/
+        box-shadow: 0 8px 30px rgba(0, 0, 0, 0.7); /* Sombra*/
+    }
+}
+
+@keyframes overlayOut{ /* Quita el overlay*/
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+      
+    }
+}
+
+@keyframes gameOverEffect{
+    0% {
+        filter: grayscale(100%);
+    }
+    100% {
+        filter: grayscale(0%);
+      
+    }
+}
+
+@keyframes spin {
+    0%, 100% {
+        transform: scaleX(1);
+    }
+    25% {
+        transform: scaleX(-1);
+    }
+    50% {
+        transform: scaleX(1); 
+    }
+    75% {
+        transform: scaleX(-1); 
     }
 }
